Fixed the issue of overlapping logo
The logo in faq page will overlap with dropdown menu when
viewing with mobile devices

--- a/assets/style/src/_layout.scss
+++ b/assets/style/src/_layout.scss
@@ -198,7 +198,9 @@
     .logo{
       display: block;
       margin: 0 auto;
-      width: 48px;
+      img{
+        width: 48px;
+      }
     }
     .navbar{
       position: absolute;
